[package]
name = "pepeline"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pepeline"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
numpy = "0.20.0"
ndarray = "0.15.6"
image = "0.25.0"
zune-jpeg = "0.4.11"
zune-psd = "0.4.0"
filebuffer = "0.4.0"
#fast_image_resize = "3.0.4"
#webp = "0.2.6"
#filebuffer = "0.4.0"
#ndarray-conv = "0.2.0"
#ndarray-vision = "0.5.1"
#rayon = "1.9.0"

