[package]
name = "pepeline"
version = "0.3.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pepeline"
crate-type = ["cdylib"]


[dependencies]
pyo3 = { version = "0.21", features = ["gil-refs"] }
numpy = "0.21.0"
ndarray = "0.15.6"
image = "0.25.0"
zune-jpeg = "0.4.11"
zune-psd = "0.4.0"
filebuffer = "0.4.0"
noise = "0.9.0"
rand = "0.8.5"
#fast_image_resize = "3.0.4"

#num = "0.4.2"
#ndarray-conv = "0.2.0"
#ndarray-vision = "0.5.1"
#rayon = "1.9.0"

