[package]
name = "pepeline"
version = "0.3.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pepeline"
crate-type = ["cdylib"]


[dependencies]
pyo3 = "0.23.4"
numpy = "0.23.0"
ndarray = "0.15.6"
image = "0.25.5"
zune-psd = "0.4.0"
filebuffer = "1.0.0"
noise = "0.9.0"
rand = "0.8.5"
fast_image_resize = "5.0.0"
bytemuck = "1.19.0"
#num = "0.4.2"
#ndarray-conv = "0.2.0"
#ndarray-vision = "0.5.1"
#rayon = "1.9.0"

